--- a/SupplementFiles/Table App A spawner model.Rmd
+++ b/SupplementFiles/Table App A spawner model.Rmd
@@ -21,9 +21,16 @@ if(Supplement){
 }
 ```
 
+```{r child = file.path(here::here(),'AppendixFiles','Appendix-Variables.Rmd')}
+```
+
 ```{r table-appA-set-spawner-years, echo=FALSE}
 #dat.spawners defined in setup-covariates.Rmd
-dat=dat.spawners
+vars <- getspawnercovs()
+datcommon <- dat.spawners[, 
+  c("Year", "spawners0", "spawners1", "spawners2",
+    "nspawners1", "nspawners2", vars$allcovnames)]
+dat <- na.omit(datcommon)
 Yr1 = min(dat$Year)
 Yr2 = max(dat$Year)
 
@@ -59,7 +66,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -102,7 +109,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -116,7 +123,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -130,7 +137,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -171,7 +178,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -185,7 +192,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -199,7 +206,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -240,7 +247,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -254,7 +261,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -268,7 +275,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -290,7 +297,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -298,7 +305,7 @@ seltable=rbind(seltable,tmp1)
 
 ```{r print-tableA1a, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "\\shortstack{LOOCV\\\\RMSE}")
 
 thecap=paste("Model selection tests of time-dependency the log catch during spawning months using F-tests of nested linear models.  $S_t$ is the catch during the spawning period (Jul-Sep). $N_t$ is the catch during the non-spawning period (Oct-Jun). $S_{t-1}$ and $N_{t-1}$ are the catch during the prior season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior.  Test A uses catch during the spawning period as the explanatory variable.  Test B uses catch during the non-spawning period as the explanatory variable.  The numbers in front of the model equation indicate the level of nestedness. For Test C, there are two nested model sets, each with a different model 3.  The Naive model is a model that uses the previous data point in the time series as the prediction; thus the Naive model has no estimated parameters.")
 fullcap=paste("Table ", ref(paste0(tabset,"spawner-model-linear"), pre=pre), ". ", thecap, sep="")
@@ -338,7 +345,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -352,7 +359,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -366,7 +373,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -407,7 +414,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -421,7 +428,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -435,7 +442,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -476,7 +483,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -490,7 +497,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -512,7 +519,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -547,7 +554,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2),
+  AIC=round(mod$AICc, digits=2),
   LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -561,7 +568,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2),
+  AIC=round(mod$AICc, digits=2),
   LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -575,7 +582,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2),
+  AIC=round(mod$AICc, digits=2),
   LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -589,7 +596,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(MARSS:::residuals.marssMLE(mod, silent=TRUE)$model.residuals), na.rm=TRUE)/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(mod$AIC, digits=2),
+  AIC=round(mod$AICc, digits=2),
   LOOCV=round(sqrt(mean(err^2, na.rm=TRUE)), digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -598,7 +605,7 @@ seltable=rbind(seltable,tmp1)
 
 ```{r print-tableA1b, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "\\shortstack{LOOCV\\\\RMSE}")
 
 thecap=paste0("Model selection tests of time-dependency the catch during spawning months using non-linear or time-varying linear responses instead of time-constant linear responses as in Table ", ref(paste0(tabset,"spawner-model-linear"), pre=pre), ". See Table ", ref(paste0(tabset,"spawner-model-linear"), pre=pre), " for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref(paste0(tabset,"spawner-model-nonlinear"), pre=pre), ". ", thecap, sep="")
@@ -611,7 +618,7 @@ cat("\\clearpage")
 
 
 ```{r seltableA-spawner-1956, echo=FALSE}
-respdat = fullrespdat[which(fullrespdat$Year==1956):which(fullrespdat$Year==(Yr1-1)),]
+respdat = dat.spawners[which(dat.spawners$Year==1956):which(dat.spawners$Year==(Yr1-1)),]
 
 #set up table
 seltable = data.frame(
@@ -640,7 +647,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -654,7 +661,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -668,7 +675,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -709,7 +716,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -723,7 +730,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -737,7 +744,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -778,7 +785,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -792,7 +799,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -814,7 +821,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -822,7 +829,7 @@ seltable=rbind(seltable,tmp1)
 
 ```{r print-tableA1c, echo=FALSE}
 colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "\\shortstack{LOOCV\\\\RMSE}")
 
 thecap=paste0("Table ",ref(paste0(tabset,"spawner-model-nonlinear"), pre=pre), " with 1956-",Yr1-1, " data instead of ", Yr1, " to ", Yr2, " data.  See Table ",ref(paste0(tabset,"spawner-model-linear"), pre=pre), " for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref(paste0(tabset,"spawner-model-1956"), pre=pre), ". ", thecap, sep="")
