--- a/SupplementFiles/Table App A nonspawner model.Rmd
+++ b/SupplementFiles/Table App A nonspawner model.Rmd
@@ -67,7 +67,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2="", 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -110,7 +110,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -124,7 +124,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -138,7 +138,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -179,7 +179,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -193,7 +193,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -207,7 +207,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -248,7 +248,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -262,7 +262,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -284,15 +284,15 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
 ```
 
 ```{r print-tableA2a, echo=FALSE}
-colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
+colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AICc", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\$R^2$}", "F", "\\shortstack{p\\\\value}", "AICc", "\\shortstack{LOOCV\\\\RMSE}")
 
 thecap=paste("Model selection tests of time-dependency the $N_t$ model using F-tests of nested models fit to", Yr1, "to", Yr2, "log landings data.  The years are determined by the covariate data availability and end in 2014 since the landings data go through 2015 and $N_{2014}$ includes quarters in 2014 and 2015. $N_t$ is the catch during the non-spawning period (Qtrs 4 and 1: Oct-Mar) of season $t$ (Jul-Jun). $S_{t-1}$ and $N_{t-1}$ are the catch during the prior sardine season during and after the spawning period respectively. $S_{t-2}$ and $N_{t-2}$ are the same for two seasons prior.  Test A uses catch during the spawning period as the explanatory variable.  Test B uses catch during the non-spawning period as the explanatory variable.  Test C uses both. The numbers next to the model equations indicate the level of nestedness. The Naive model is a model that uses the previous data point in the time series as the prediction; thus the Naive model has no estimated parameters.")
 fullcap=paste("Table ", ref(paste0(tabset,"nonspawner-model-time-a"), pre=pre), ". ", thecap, sep="")
@@ -329,7 +329,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -343,7 +343,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -357,7 +357,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -396,7 +396,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -410,7 +410,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -424,7 +424,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -463,7 +463,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -477,7 +477,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -497,7 +497,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -582,8 +582,8 @@ seltable=rbind(seltable,tmp1)
 ```
 
 ```{r print-table2Ab, echo=FALSE}
-colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
+colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AICc", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\$R^2$}", "F", "\\shortstack{p\\\\value}", "AICc", "\\shortstack{LOOCV\\\\RMSE}")
 
 thecap=paste("Model selection tests of time-dependency the $N_t$ model using non-linear or time-varying linear responses instead of time-constant linear responses as in Table",ref(paste0(tabset,"nonspawner-model-time-a"), pre=pre), "See Table",ref(paste0(tabset,"nonspawner-model-time-a"), pre=pre), "for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref(paste0(tabset,"nonspawner-model-time-b"), pre=pre), ". ", thecap, sep="")
@@ -621,7 +621,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -635,7 +635,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -649,7 +649,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -688,7 +688,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -702,7 +702,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -716,7 +716,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -755,7 +755,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F="", p.value="", 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -769,7 +769,7 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
@@ -789,15 +789,15 @@ tmp1=data.frame(
   MASE=round(mean(abs(residuals(get(mod))))/NE,digits=3), 
   Adj.R2=100*round(aa$r.sq, digits=3), 
   F=round(a$F[i],digits=2), p.value=round(a[["Pr(>F)"]][i], digits=3), 
-  AIC=round(AIC(get(mod)), digits=2),
+  AIC=round(SardineForecast:::AICc(get(mod)), digits=2),
   LOOCV=round(SardineForecast:::loogam(get(mod))$RMSE, digits=3)
 )
 seltable=rbind(seltable,tmp1)
 ```
 
 ```{r print-table2Ac, echo=FALSE}
-colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AIC", "LOOCV")
-if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\R2}", "F", "\\shortstack{p\\\\value}", "AIC", "LOOCV")
+colnames(seltable)=c("Model", "Residual df", "MASE", "Adj.R2", "F", "p value", "AICc", "LOOCV")
+if(isLatex) colnames(seltable)=c("Model", "\\shortstack{Residual\\\\df}", "MASE", "\\shortstack{Adj.\\\\$R^2$}", "F", "\\shortstack{p\\\\value}", "AICc", "\\shortstack{LOOCV\\\\RMSE}")
 
 thecap=paste0("Table ",ref(paste0(tabset,"nonspawner-model-time-b"), pre=pre), " with 1956-",Yr1-1, " data instead of ", Yr1, " to ", Yr2, " data.  The years used in fit start in 1958 since $t-2$ (which is 1956 for the 1958 data point) is used in the covariates. See Table ",ref(paste0(tabset,"nonspawner-model-time-a"), pre=pre), " for an explanation of the parameters and model set-up.")
 fullcap=paste("Table ", ref(paste0(tabset,"nonspawner-model-time-c"), pre=pre), ". ", thecap, sep="")
