--- a/Updates.Rmd
+++ b/Updates.Rmd
@@ -9,6 +9,23 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # April 2020
 
+### April 17, 2020
+
+To do
+
+* Edit discussion and conclusion
+* Address remaining editor comments in Word doc
+* Compare edited text to old text
+
+Done
+
+* ~~Check that data supplement has all the data~~
+* ~~R programming language (R Development Core Team, 2019)~~
+* ~~Check ref to Figure 5~~
+* ~~Look for ref for why precip over land might be bad~~
+
+
+
 ### April 14-16, 2020
 
 Done
@@ -26,7 +43,7 @@ To do
 * Check ref to Figure 5
 * Look for ref for why precip over land might be bad
 * Address remaining editor comments in Word doc
-* ?? Test of autocorrelation of residuals and normality to appendix
+* [if requested] Test of autocorrelation of residuals and normality to appendix
 * Compare edited text to old text
 * Check that data supplement has all the data
 
